unpackaged/main/default/objects/pse__Project_Actuals_Converted__c/fields/psaws__PM_Is_User__c.field-meta.xml
<CustomField>
    <fullName>psaws__PM_Is_User__c</fullName>
    <description>This will detect if the logged in User is the contact populated on the Project Manager field on the related Project object.</description>
    <formula>pse__Project__r.pse__Project_Manager__r.pse__Salesforce_User__c = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is the current User the Project Manager of the related Project.</inlineHelpText>
    <label>PM Is User</label>
    <type>Checkbox</type>
</CustomField>