unpackaged/main/default/objects/pse__Project_Actuals_Converted__c/fields/pse__Project_Actuals__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_Actuals__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Actuals</label>
    <referenceTo>pse__Project_Actuals__c</referenceTo>
    <relationshipLabel>Project Actuals Converted</relationshipLabel>
    <relationshipName>Project_Actuals_Converted</relationshipName>
    <type>Lookup</type>
</CustomField>