unpackaged/main/default/objects/pse__Project_Actuals_Converted__c/fields/pse__Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_Manager__c</fullName>
    <formula>pse__Project__r.pse__Project_Manager__r.FirstName &amp; " " &amp; pse__Project__r.pse__Project_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Manager</label>
    <type>Text</type>
</CustomField>