unpackaged/main/default/objects/pse__Project_Actuals_Converted__c/fields/pse__Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>pse__Unique_Name__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Unique Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>