unpackaged/main/default/objects/pse__Project_Actuals_Converted__c/fields/pse__Verified_By__c.field-meta.xml
<CustomField>
    <fullName>pse__Verified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Self-join to store a temporary recalculation of the actuals for verification purposes</description>
    <label>Verified By</label>
    <referenceTo>pse__Project_Actuals_Converted__c</referenceTo>
    <relationshipLabel>Project Actuals Converted</relationshipLabel>
    <relationshipName>Project_Actuals_Converted</relationshipName>
    <type>Lookup</type>
</CustomField>